--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   		<link rel="stylesheet" href="js/layui/css/layui.css"  media="all">
 	</head>
 	<body>
+	<div class="tab">
+		<div class="top">
+			123
+		</div>
 		<div class="top">
 			<div class="tab-menu">
 			    <ul>
@@ -20,7 +24,7 @@
 			<div class="tab-con">
 				<!--日报表-->
 			    <div class="day">
-			    	<div class="titleDiv"><img class="imgbt" src="img/bt1.png"><span class="title">智慧城市访客统计日报表</span><img class="imgbt" src="img/bt2.png"></div>
+			    	<div class="titleDiv"><img class="imgbt" src="img/bt1.png"><span class="title">展馆访客统计</span><img class="imgbt" src="img/bt2.png"></div>
 				    <div class="numsexDiv">
 				    	<div class="numDiv">
 				    		<div class="peoplenum"><div class="peoplenum1">访客统计</div></div>
@@ -46,7 +50,7 @@
 			    	</div>
 			    </div>
 			    <div class="day">
-			    	<div class="titleDiv"><img class="imgbt" src="img/bt1.png"><span class="title">智慧城市访客统计月报表</span><img class="imgbt" src="img/bt2.png"></div>
+			    	<div class="titleDiv"><img class="imgbt" src="img/bt1.png"><span class="title">展馆访客统计</span><img class="imgbt" src="img/bt2.png"></div>
 				    <div class="numsexDiv">
 				    	<div class="numDiv">
 				    		<div class="peoplenum"><div class="peoplenum1">访客统计</div></div>
@@ -74,6 +78,7 @@
 			    
 			</div>
 		</div>
+	</div>
 	    <div class="buttom">
 	    	<div class="timeDate">
 			    <ul>
