添加实时流量

--- a/index.html
+++ b/index.html
@@ -9,7 +9,32 @@
 	<body>
 	<div class="tab">
 		<div class="top">
-			123
+			<div class="data">
+				<div class="titleDiv"><img class="imgbt" src="img/bt1.png"><span class="title">展馆访客统计</span><img class="imgbt" src="img/bt2.png"></div>
+				<div class="numsexDiv">
+					<div class="numDiv">
+						<div class="peoplenum"><div class="peoplenum1">访客统计</div></div>
+						<div class="daynum">
+							当日访客流量统计：
+							<div class="daynum1">
+								<span class="spanday">3333</span>人
+							</div>
+						</div>
+					</div>
+					<div class="sexDiv">
+						<div class="peoplenum"><div class="sexbgImg">访客性别分布</div></div>
+						<div class="pic1" id="pic7"></div>
+					</div>
+					<div class="ageDiv">
+						<div class="peopleage"><div class="agebgImg">访客年龄分布</div></div>
+						<div class="pic2" id="pic8"></div>
+					</div>
+				</div>
+				<div class="areaDiv">
+					<div class="peopleage"><div class="areabgImg">访客分布热力图</div></div>
+					<div class="pic3" id="pic9"></div>
+				</div>
+			</div>
 		</div>
 		<div class="top">
 			<div class="tab-menu">
@@ -37,16 +62,16 @@
 				    	</div>
 				    	<div class="sexDiv">
 				    		<div class="peoplenum"><div class="sexbgImg">访客性别分布</div></div>
-							<div id="pic1"></div>
+							<div class="pic1" id="pic1"></div>
 				    	</div>
 				    	<div class="ageDiv">
 					    	<div class="peopleage"><div class="agebgImg">访客年龄分布</div></div>
-							<div id="pic2"></div>
+							<div class="pic2" id="pic2"></div>
 				    	</div>
 					</div>	    
 			    	<div class="areaDiv">
 				    	<div class="peopleage"><div class="areabgImg">访客分布热力图</div></div>
-						<div id="pic3"></div>
+						<div class="pic3" id="pic3"></div>
 			    	</div>
 			    </div>
 			    <div class="day">
@@ -63,16 +88,16 @@
 				    	</div>
 				    	<div class="sexDiv">
 				    		<div class="peoplenum"><div class="sexbgImg">访客性别分布</div></div>
-							<div id="pic4"></div>
+							<div class="pic1" id="pic4"></div>
 				    	</div>
 				    	<div class="ageDiv">
 					    	<div class="peopleage"><div class="agebgImg">访客年龄分布</div></div>
-							<div id="pic5"></div>
+							<div class="pic2" id="pic5"></div>
 				    	</div>
 					</div>	    
 			    	<div class="areaDiv">
 				    	<div class="peopleage"><div class="areabgImg">访客分布热力图</div></div>
-						<div id="pic6"></div>
+						<div class="pic3" id="pic6"></div>
 			    	</div>
 			    </div>
 			    
@@ -82,8 +107,8 @@
 	    <div class="buttom">
 	    	<div class="timeDate">
 			    <ul>
-			        <li class="tab2">实时数据</li>
-			        <li class="tab3">访客统计</li>
+			        <li class="tab2">实时流量</li>
+			        <li class="tab3">历史统计</li>
 			    </ul>
 	    	</div>
 	    </div>
