--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<div class="daynum">
 							当日访客流量统计：
 							<div class="daynum1">
-								<span class="spanday">3333</span>人
+								<span class="spanday1">3333</span>人
 							</div>
 						</div>
 					</div>
@@ -82,7 +82,7 @@
 				    		<div class="daynum">
 				    			本月访客流量统计：
 				    			<div class="daynum1">
-				    				<span class="spanday">333</span>人
+				    				<span class="spanday2">333</span>人
 				    			</div>
 				    		</div>
 				    	</div>
